--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.16.2",
+    "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "fastify-jwt": "^4.2.0",
     "fastify-swagger": "^5.2.0",
@@ -18,6 +19,7 @@
     "zod-to-json-schema": "^3.23.1"
   },
   "devDependencies": {
+    "@types/fastify-jwt": "^0.8.1",
     "@types/node": "^20.14.10",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.3"
